
Rich Carlson	6/7/02  Modified 8/17/04

8/18/04 - ndt v3.0.20
  web100srv.c
	Added code to process "disable_FIFO", "syslog", and "Debug"
	options via the ndt.conf file.  The debug option requires
	a value, the debug message level, while the other 2 are boolean
	flags.  
  ndt.conf.man
	added in text to describe how these options are specified.

8/16/04	- ndt v3.0.19
  web100clt.c
	bugfix.  The mylink variable was not being set, so buffer
	size recommendation messages were not being given.  

	Added code to print an information message if the receive
	buffer could more than double throughput.  New message will
	calcualte the buffer size required to maximize throughput.
	Note value can be verified by using the -b# option.

  Tcpbw100.java v5.3.3a
	Same changes were made to the applet version.  

8/9/04 - ndt v3.0.19
  web100srv.c
	bugfix.  change byte descriptor from int to double to prevent
	overrunning at greater than gigabit rates (caused negative
	throughput rates to be reported).

	Added in new "-s" for syslog, option.  This option causes
	the server to write usage statistics using the syslog
	facility at local0 levels.  This will allow the data to be
	sent to a remote host for archival purposes.

7/28/04 - ndt v3.0.18
  tcpbw100.template
	This file is modified by the create-html.sh script creating
	the main NDT web page (tcpbw100.html).  The applet code now
	resides in a table, allowing the applet to appear in the
	center of the window, and not randomly aligned.  The list of
	public servers was also modified to include the new NSF server.

7/15/04 - ndt v3.0.17
  fakewww.c
	The server now writes redirect messages to the log file.

7/14/04 - ndt v3.0.16
  web100clt.c
	added in code to recognize old servers, those that don't
	support queuing, and exit gracefully.  Old servers relied
	on the client to analyze the connection data, new servers
	perform the analysis and pass the results back to the 
	client.

7/9/04 - ndt v3.0.15
  web100clt.c