@@ -5,15 +5,20 @@
 # flags to control the NDT server functions.  These same
 # options can be set via command line option flags.
 #
-# Valid keys are:
+# Valid boolean keys are:
 #  administrator_view (5)
+#  disable_FIFO (5)
 #  multiple_clients (5)
 #  record_reverse (6)
+#  syslog (6)
 #  write_trace (5)
+#
+#  These keys require a value:
+#  debug (5) -- debug level
+#  device (5)  --  Ethernet device name
+#  log_file (3)  --  alternate fn
+#  port (4)  -- alternate port number
 #  TCP_Buffer_size (3)  -- TCP buffer value
 #  variable_file (6)  --  alternate fn
-#  log_file (3)  --  alternate fn
-#  device (5)  --  Ethernet device name
-#  port (4)  -- alternate port number
 
 administrator_view	# boolean flag to set administrator view
